# Autonomous_Mapping_Robot

./: README.md
Gazebo(Simulation)/src/my_robot_description/: CMakeLists.txt  package.xml
Gazebo(Simulation)/src/my_robot_description/config/: gazebo_bridge.yaml  twist_mux.yaml
Gazebo(Simulation)/src/my_robot_description/launch/: my_robot.launch.xml
Gazebo(Simulation)/src/my_robot_description/rviz/: configduphong.rviz  urdf_config.rviz
Gazebo(Simulation)/src/my_robot_description/urdf/: coderac.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro
Gazebo(Simulation)/src/my_robot_description/worlds/: my_world.sdf  worldduphong.sdf  worldtao.sdf
Gazebo(Simulation)/src/py_pkg/: setup.py
Gazebo(Simulation)/src/py_pkg/py_pkg/: mux_vel.py  path.py  path_planner.py  pursuit.py  slam.py
Real/src/py_pkg/: package.xml  setup.py
Real/src/py_pkg/py_pkg/: mapodom_tf.py  mux_vel.py  path.py  path_planner.py  pursuit.py  slam.py
Real/src/real_car_description/: CMakeLists.txt  package.xml
Real/src/real_car_description/config/: my_robot_controllers.yaml
Real/src/real_car_description/launch/: my_robot.launch.xml
Real/src/real_car_description/urdf/: mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro
Real/src/real_car_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
Real/src/real_car_hardware/include/real_car_hardware/: esp32_driver.hpp  mobile_base_hardware_interface.hpp
Real/src/real_car_hardware/src/: mobile_base_hardware_interface.cpp
Real/src/ros2_camsense_x1/: CMakeLists.txt  package.xml
Real/src/ros2_camsense_x1/config/: config.yaml
Real/src/ros2_camsense_x1/include/camsense_x1/: camsense_x1.hpp
Real/src/ros2_camsense_x1/src/: camsense_x1.cpp  camsense_x1_node.cpp
Robotmodel/: base.f3d
